--- a/SelfStart/SelfStartFrontEnd/app/templates/components/client-file.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/client-file.hbs
@@ -119,7 +119,7 @@
                   {{assign-rehabplan  plansData=plan model=model}}
               </td>
               <td class="right aligned one wide column ">
-                {{edit-rehabplan  plansData=plan }}
+                {{!--{{edit-rehabplan  plansData=plan }}--}}
               </td>
               <td class="left aligned one wide column ">
                 <p>{{delete-rehabplan ID=plan.id flagDelete=flagDelete}}</p>
