--- a/SelfStart/SelfStartFrontEnd/app/templates/components/nav-bar.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/nav-bar.hbs
@@ -25,9 +25,9 @@
               <a class="item scroll" href="#about">About</a>
               <a class="item">How it Works</a>
               <a class="item">Services</a>
-              <a class="item">Assessment</a>
-              <a class="item">Blog</a>
+              <a class="item">FAQ's</a>
               <a class="item">Contact</a>
+              <a class="item">Blog</a>
               {{#if loggedOut}}
                 <a id="login" class="item" {{action 'openModal'}}>Log in</a>
               {{else}}
