--- a/SelfStart/SelfStartFrontEnd/app/styles/app.scss
+++ b/SelfStart/SelfStartFrontEnd/app/styles/app.scss
@@ -147,3 +147,17 @@ a img {
   z-index:1;
 }
 
+.slick-prev {
+  left: -22px;
+  z-index: 1;
+}
+
+.slick-next {
+  right: -22px;
+  z-index: 1;
+}
+
+.slick-prev:before, .slick-next:before{
+  color: dimgrey;
+}
+
