--- a/SelfStart/SelfStartFrontEnd/app/templates/components/delete-exercises.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/delete-exercises.hbs
@@ -1,6 +1,12 @@
-<button class = "ui mini circular icon red button" {{action 'openModal'}} title="Delete">
-  <i class=" remove icon"> </i>
-</button>
+{{!-- <div class = "ui button" {{action 'openModal'}} title="Delete"> --}}
+{{!-- <i class=" remove icon"> </i> --}}
+{{!-- Delete --}}
+{{!-- </div> --}}
+
+<button style="min-width: 75px;min-height: 40px;margin-top: -12px;border-bottom-left-radius: 0;border-top-left-radius: 0;border-bottom-right-radius: 0.28571429rem;" class="ui button" {{action 'openModal'}}>Delete</button>
+
+{{!-- <div class="ui basic red button" {{action 'openModal'}}>Delete</div> --}}
+
 
 {{#ui-modal name=modalName class=modalName}}
   <div class="ui icon header">
