--- a/SelfStart/SelfStartFrontEnd/app/templates/components/edit-rehabplan.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/edit-rehabplan.hbs
@@ -37,6 +37,7 @@
         <table class="ui fixed table" style="border: none;border-color: white;">
           <tbody >
           <tr style="font-weight: bold;">
+
             {{#each exerciseAttributes as |column|}}
               <th style="padding-left: 1em" class={{column.class}} {{action 'sortColumn' column.key column.dir}}>{{column.name}}
                 {{#if (eq column.dir 'asc')}}
@@ -52,6 +53,7 @@
               <th class="left aligned four wide column"></th>
             {{/each}}
           </tr>
+
           </tbody>
         </table>
       </div>
@@ -61,19 +63,35 @@
       <div  id="exerciseWin" style="height:500px; overflow-y: scroll; overflow-x: hidden;">
         <table class="ui fixed table" id="tb" style="margin: 0 0;border: none;">
           <tbody >
-          {{#each sortedNames as |exercise|}}
 
-            <tr>
-              {{#each exerciseAttributes as |column|}}
-                <td class={{column.class}}>
-                  {{get exercise column.key}}
-                </td>
-                <td class="left aligned four wide column">
-                  {{ui-checkbox checked=(get exercise 'selected') onChange=(action (mut (get exercise 'selected')))}}
-                </td>
-              {{/each}}
-            </tr>
-          {{/each}}
+          {{#if asc}}
+            {{#each sortedNames as |exercise|}}
+              <tr>
+                {{#each exerciseAttributes as |column|}}
+                  <td class={{column.class}}>
+                    {{get exercise column.key}}
+                  </td>
+                  <td class="left aligned four wide column">
+                    {{ui-checkbox checked=(get exercise 'selected') onChange=(action (mut (get exercise 'selected')))}}
+                  </td>
+                {{/each}}
+              </tr>
+            {{/each}}
+          {{else}}
+            {{#each sortedNamesDesc as |exercise|}}
+              <tr>
+                {{#each exerciseAttributes as |column|}}
+                  <td class={{column.class}}>
+                    {{get exercise column.key}}
+                  </td>
+                  <td class="left aligned four wide column">
+                    {{ui-checkbox checked=(get exercise 'selected') onChange=(action (mut (get exercise 'selected')))}}
+                  </td>
+                {{/each}}
+              </tr>
+            {{/each}}
+          {{/if}}
+
           </tbody>
         </table>
       </div>
