--- a/SelfStart/SelfStartFrontEnd/app/templates/components/rehab-plan.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/rehab-plan.hbs
@@ -61,19 +61,33 @@
   <div  id="exerciseWin" style="height:500px; overflow-y: scroll; overflow-x: hidden;">
     <table class="ui fixed table" id="tb" style="margin: 0 0;border: none;">
       <tbody >
-      {{#each sortedNames as |exercise|}}
-
-        <tr>
-          {{#each exerciseAttributes as |column|}}
-            <td class={{column.class}}>
-              {{get exercise column.key}}
-            </td>
-            <td class="left aligned four wide column">
-              {{ui-checkbox checked=(get exercise 'selected') onChange=(action (mut (get exercise 'selected')))}}
-            </td>
-          {{/each}}
-        </tr>
-      {{/each}}
+      {{#if asc}}
+        {{#each sortedNames as |exercise|}}
+          <tr>
+            {{#each exerciseAttributes as |column|}}
+              <td class={{column.class}}>
+                {{get exercise column.key}}
+              </td>
+              <td class="left aligned four wide column">
+                {{ui-checkbox checked=(get exercise 'selected') onChange=(action (mut (get exercise 'selected')))}}
+              </td>
+            {{/each}}
+          </tr>
+        {{/each}}
+      {{else}}
+        {{#each sortedNamesDesc as |exercise|}}
+          <tr>
+            {{#each exerciseAttributes as |column|}}
+              <td class={{column.class}}>
+                {{get exercise column.key}}
+              </td>
+              <td class="left aligned four wide column">
+                {{ui-checkbox checked=(get exercise 'selected') onChange=(action (mut (get exercise 'selected')))}}
+              </td>
+            {{/each}}
+          </tr>
+        {{/each}}
+      {{/if}}
       </tbody>
     </table>
   </div>
