fixed endTime on view schedule

--- a/SelfStart/SelfStartFrontEnd/ember-calendar/app/templates/components/as-calendar/occurrence.hbs
+++ b/SelfStart/SelfStartFrontEnd/ember-calendar/app/templates/components/as-calendar/occurrence.hbs
@@ -3,5 +3,6 @@
     {{yield}}
   {{else}}
     <h1 class="as-calendar-occurrence__title" style={{titleStyle}}>{{title}}</h1>
+    <h1> {{startingTime}} - {{dayEndingTime}}</h1>
   {{/if}}
 </div>
