--- a/SelfStart/SelfStartFrontEnd/app/templates/components/add-exercises.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/add-exercises.hbs
@@ -1,46 +1,5 @@
 {{#if isEditing}}
 
-{{!-- {{#ui-modal name=modalName class=modalName}}
-    
-    <div class="scrolling content">
-        <div class ="ui center alligned five column grid">
-            {{#each Images as |Image|}}
-                <div class ="column">
-                <div class="ui fluid card" style="max-height:221px;min-height:221px;">
-                    <div class="content">
-                         <div class ="sidebar-box" style="max-height:50px;min-height:50px;">
-                            <p class ="sidebar-box">{{Image.name}}</p>
-                        </div>
-                    </div>
-                    <div class = "content" style="min-height:105px;">
-                        <div class="image">
-                            <img style="max-height:105px;" class = "ui small image" src="{{Image.imageData}}">
-                        </div>
-                    </div>
-                    <div class="extra content">
-                        <div class="ui toggle checkbox">
-                            {{input type="checkbox" checked=cbState change=(action "addTempImage" Image) }}
-                            <label>Add</label>
-                        </div>
-                    </div>
-                </div>
-                </div>
-            {{/each}}
-        </div>
-    </div>
-
-    <div class="actions">
-        <div class="ui positive button">Save</div>
-        <div class="ui black deny button">Cancel</div>
-        <div class="ui form" >
-            <div class="fields" >
-                <div class="ui fluid search">{{input type="text" placeholder="Search..." }}</div>
-            </div>
-        </div>
-    </div>
-    <br><br>
-{{/ui-modal}} --}}
-
 <div class="ui fluid raised very padded text container segment">
    <h2 id="exercise" class="ui fluid centered header">Add New Exercise</h2>
 
@@ -59,35 +18,6 @@
         <div class="field">
             <label>Author Name</label>
             {{input type ="text" value=AuthName placeholder="Author Name"}}
-        </div>
-
-        <div class="field">
-
-            <label>Objectives</label>
-
-            <div class="ui action input">
-                {{input type ="text" value=Objective placeholder="Objective"}}
-                <button class="ui white right labeled icon button" {{action "addObjective"}}>
-                    Add Objective
-                    <i class="add icon"></i>
-                </button>
-            </div>
-
-            <div class="ui inverted segment">
-                <label>Current Objectives</label>
-                <ul align = "left">
-                    {{#each obj as |o|}}
-                        <li>
-                            <p>
-                                {{o}}
-                                <br>
-                                <i style=" cursor: pointer;" title="Edit" {{action 'edit' }} class="gray write icon" ></i>
-                                <i style=" cursor: pointer;" title="Delete" {{action "openModal" }} class="red remove icon" ></i>
-                            </p> 
-                        </li>
-                    {{/each}}
-                </ul>
-            </div>
         </div>
 
         <div class="field">
@@ -116,32 +46,44 @@
             </div>
         </div>
 
-        <div class="field">
-            <label>Location</label>
-            {{input type ="text" value=Location placeholder="Location"}}
+        <div class ="ui grid">
+            <div class ="four wide column">
+            <div class = "field">
+                <label># of Sets</label>
+                {{input type ="number" value=Sets min=0 placeholder="Sets"}}
+            </div>
+            </div>
+
+            <div class ="four wide column">
+            <div class = "field">
+                <label># of Reps</label>
+                {{input type ="number" value=Reps min=0 placeholder="Reps"}}
+            </div>
+            </div>
+
+            <div class ="eight wide column">
+                <div class = "field">   
+                    <label>Duration</label>
+                    <div class="eight wide column">
+                        <div class="ui two column grid">
+                            <div class="column">{{input type ="number" value=DurationMinute min=0 max=59 placeholder="00m"}}</div>
+                            <div class="column">{{input type ="number" value=DurationSecond min=0 max=59 placeholder="00s"}}</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
 
-        <div class="field">
-            <label>Frequency</label>
-            {{!-- <i class="hourglass half icon"></i> --}}
-            {{input type ="text" value=Frequency placeholder="Frequency"}}
-        </div>
-
-        <div class="field">
-            <label>Duration</label>
-            {{!-- <i class="calendar icon"></i> --}}
-            {{input type ="text" value=Duration placeholder="Duration"}}
-        </div>
-
-        <div class="field">
-            <label>Target Date</label>
-             {{!-- <i class="add to calendar icon"></i> --}}
-            {{input type ="text" value=TargetDate placeholder="Target Date"}}
-        </div>
+        <br>
 
         <div class="field">
             <label>Multimedia URL</label>
             {{input type ="text" value=MMURL placeholder="Multi Media URL"}}
+        </div>
+
+        <div class="field">
+            <label>Notes</label>
+            {{textarea value=Notes cols="80" rows="6" placeholder="Notes"}}
         </div>
 
         <div class = "field">
@@ -174,25 +116,6 @@
                     </div>
                 </div>
             {{/each}}
-            {{#each queue2 as |Image| }}
-                <div class="ui divided demo items">
-                    <div class="item">
-                        <div class="image">
-                            <img src="{{Image.imageData}}">
-                        </div>
-                        <div class="middle aligned content">
-                            <div class="description">
-                                <label>Image Name</label>
-                                    {{input type ="text" valueBinding=Image.name}}
-                                    <button class="ui red basic button" {{action 'deleteFile' file}}>
-                                        Delete
-                                    </button>
-                                    <br>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            {{/each}}
                 <div class="ui fluid labeled input">
                     <label class="ui fluid huge label" style="{{labelStyle}}">
                         <i class="big cloud upload icon"></i>
@@ -202,11 +125,7 @@
                         accept="{{accept}}" multiple={{multiple}}>
                 </div>
             <br><br><br><br>
-                {{!-- <button class="ui button" {{action 'openModal'}}>Assign Images from Existing Images</button> --}}
-                 
-                 {{!-- <div class="ui block header">{{input type="text" placeholder="Search..." }}</div> --}}
-               
-                
+
                 <div class ="ui center alligned three column grid" style="border:0.5px solid black;overflow-y:scroll;max-height:300px;">
                     {{#each Images as |Image|}}
                         <div class ="column">
