--- a/SelfStart/SelfStartFrontEnd/app/templates/components/edit-exercises.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/edit-exercises.hbs
@@ -7,111 +7,86 @@
     <h2 id="rehabPlan" class="ui fluid centered header">Edit Exercise {{Name}}</h2>
 
     <form class="ui form">
-        <div class="field">
+         <div class="field">
             <label>Exercise Name</label>
-            {{input type="text" value=Name placeholder="Exercise Name"}}
+            {{input type ="text" value=Name placeholder="Exercise Name"}}
         </div>
         
         <div class="field">
             <label>Description</label>
-            {{textarea type="text" value=Description placeholder="Description"}}
+            {{textarea value=Description cols="80" rows="6" placeholder="Description"}}
         </div>
 
         <div class="field">
             <label>Author Name</label>
-            {{input type="text" value=AuthName placeholder="Author Name"}}
+            {{input type ="text" value=AuthName placeholder="Author Name"}}
         </div>
 
-      <div class="field">
-         <label>Objectives</label>
-
-            <div class="ui action input">
-                {{input type ="text" value=Objective placeholder="Objective"}}
-                <button class="ui white right labeled icon button" {{action "addObjective"}}>
-                    Add <br> Objective
-                    <i class="add icon"></i>
-                </button>
-            </div>
-
-            <div class="ui inverted segment">
-                <div align = "center">
-                    <label>Current Objectives</label>
-                </div>
-                <ul align = "left" value={{obj}}>
-                    {{#each obj as |o|}}
-                        <li>
-                            <p>
-                                {{o}}
-                                <i style=" cursor: pointer;" title="Edit" {{action 'edit' }} class="gray write icon" ></i>
-                                <i style=" cursor: pointer;" title="Delete" {{action 'openModelDelete' }} class="red remove icon" ></i>
-                            </p>    
-                        </li>
-                    {{/each}}
-                </ul>
-            </div>
-    </div>
-
-    <div class="field">
+        <div class="field">
             <label>Action Steps</label>
             <div class = "ui action input">
                 {{input type ="text" value=ActionSteps placeholder="Action Steps"}} 
                 <button class="ui white right labeled icon button" {{action "addActionStep"}}>
-                    Add <br> Action Step
+                    Add Action Step
                     <i class="add icon"></i>
                 </button>
             </div>
 
             <div class="ui inverted segment">
-                <div align = "center">
-                    <label>Current Action Steps</label>
-                </div>
-                <ol align = "left" value={{actionStep}}>
+                <label>Current Action Steps</label>
+                <ol align = "left">
                     {{#each actionStep as |aS|}}
-                        <li > 
+                        <li>
                             <p>
                                 {{aS}}
                                 <i style=" cursor: pointer;" title="Edit" {{action 'edit' }} class="gray write icon" ></i>
-                                <i style=" cursor: pointer;" title="Delete" {{action 'delete' }} class="red remove icon" ></i>
+                                <i style=" cursor: pointer;" title="Delete" {{action "openModal"}} class="red remove icon" ></i>
                             </p>
-                        </li>
+                        </li> 
                     {{/each}}
                 </ol>
             </div>
         </div>
 
-    <div class="field">
-        <label>Location</label>
-        {{input type ="text" value=Location placeholder="Location"}}
-    </div>
+        <div class ="ui grid">
+            <div class ="four wide column">
+            <div class = "field">
+                <label># of Sets</label>
+                {{input type ="number" value=Sets min=0 placeholder="Sets"}}
+            </div>
+            </div>
 
-    <div class="field">
-        <label>Frequency</label>
-        <div class="ui left icon action input">
-            <i class="hourglass half icon"></i>
-            {{input type ="text" value=Frequency placeholder="Frequency"}}
+            <div class ="four wide column">
+            <div class = "field">
+                <label># of Reps</label>
+                {{input type ="number" value=Reps min=0 placeholder="Reps"}}
+            </div>
+            </div>
+
+            <div class ="eight wide column">
+                <div class = "field">   
+                    <label>Duration</label>
+                    <div class="eight wide column">
+                        <div class="ui two column grid">
+                            <div class="column">{{input type ="number" value=DurationMinute min=0 max=59 placeholder="00m"}}</div>
+                            <div class="column">{{input type ="number" value=DurationSecond min=0 max=59 placeholder="00s"}}</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-    </div>
 
-    <div class="field">
-        <label>Duration</label>
-        <div class="ui left icon action input">
-            <i class="calendar icon"></i>
-            {{input type ="text" value=Duration placeholder="Duration"}}
+        <br>
+
+        <div class="field">
+            <label>Multimedia URL</label>
+            {{input type ="text" value=MMURL placeholder="Multi Media URL"}}
         </div>
-    </div>
 
-    <div class="field">
-        <label>Target Date</label>
-        <div class="ui left icon action input">
-            <i class="add to calendar icon"></i>
-            {{input type ="text" value=TargetDate placeholder="Target Date"}}
+        <div class="field">
+            <label>Notes</label>
+            {{textarea value=Notes cols="80" rows="6" placeholder="Notes"}}
         </div>
-    </div>
-
-    <div class="field">
-        <label>Multimedia URL</label>
-        {{input type ="text" value=MMURL placeholder="Multi Media URL"}}
-    </div>
 
     <div class = "field">
         {{#each secQueue as |image| }}
