--- a/SelfStart/SelfStartFrontEnd/app/styles/app.scss
+++ b/SelfStart/SelfStartFrontEnd/app/styles/app.scss
@@ -6,6 +6,7 @@
 @import 'addons/ember-calendar/paint-core';
 @import 'addons/ember-calendar/main';
 
+
 /*.following.bar .ui.container {*/
 /*width: 1400px;*/
 /*}*/
@@ -160,4 +161,41 @@ a img {
 .slick-prev:before, .slick-next:before{
   color: dimgrey;
 }
+
+.sphere {
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  background-image: linear-gradient(to bottom , #b3daf3, #1a71d2);
+}
+
+.centered {
+  top: 50%;
+  left: 50%;
+  margin-right: -50%;
+  position: relative;
+  transform: translate(-50%);
+}
+
+.number{
+  display: block;
+  font-size: 2.2rem;
+  line-height: 4.1000000000000005rem;
+  color: #BB5B86;
+}
+
+.ui.payment.card:hover {
+  transform: scale(1.1);
+  z-index: 100;
+}
+
+.extra.content.footer:hover{
+  cursor: pointer;
+
+  .p:hover{
+    color: #0d71bb;
+  }
+}
+
+
 
