Update backend completely to account for rehabClientLink

--- a/SelfStart/SelfStartFrontEnd/app/templates/components/assign-rehabplan.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/assign-rehabplan.hbs
@@ -10,6 +10,9 @@
     Assign {{plansData.planName}}
   </div>
   <div class="content">
+    <div>
+      {{list-forms ID=plansData.id plan=plansData}}
+    </div>
     <p>Are you sure you want to assign this rehabilitation plan?</p>
   </div>
   <br>
