--- a/SelfStart/SelfStartFrontEnd/ember-calendar/app/templates/components/as-calendar/occurrence.hbs
+++ b/SelfStart/SelfStartFrontEnd/ember-calendar/app/templates/components/as-calendar/occurrence.hbs
@@ -1,8 +1,20 @@
 <div class="as-calendar-occurrence__container">
-  {{#if hasBlock}}
-    {{yield}}
+
+  {{#if isBooked}}
+    {{#if hasBlock}}
+      {{yield}}
+    {{else}}
+      <h1 class="as-calendar-occurrence__title" style={{titleStyle}}>{{title}}</h1>
+      <h1> {{startingTime}} - {{dayEndingTime}}</h1>
+      <h1>testing true isBooked</h1>
+    {{/if}}
   {{else}}
-    <h1 class="as-calendar-occurrence__title" style={{titleStyle}}>{{title}}</h1>
-    <h1> {{startingTime}} - {{dayEndingTime}}</h1>
+    {{#if hasBlock}}
+      {{yield}}
+    {{else}}
+      <h1 class="as-calendar-occurrence__title" style={{titleStyle}}>{{title}}</h1>
+      <h1> {{startingTime}} - {{dayEndingTime}}</h1>
+    {{/if}}
   {{/if}}
+
 </div>
