--- a/SelfStart/SelfStartFrontEnd/ember-calendar/app/templates/components/as-calendar/timetable/occurrence.hbs
+++ b/SelfStart/SelfStartFrontEnd/ember-calendar/app/templates/components/as-calendar/timetable/occurrence.hbs
@@ -1,4 +1,5 @@
-<div class="as-calendar-occurrence__container">
+{{#if isBooked}}
+  <div class="as-calendar-occurrence__container1">
   {{#if hasBlock}}
     {{yield}}
   {{else}}
@@ -15,4 +16,24 @@
       <div class="as-calendar-occurrence__resize-handle"></div>
     {{/if}}
   {{/unless}}
-</div>
+  </div>
+{{else}}
+  <div class="as-calendar-occurrence__container">
+  {{#if hasBlock}}
+    {{yield}}
+  {{else}}
+    <h1 class="as-calendar-occurrence__title" style={{titleStyle}}>{{title}}</h1>
+    <h1> {{startingTime}} - {{dayEndingTime}}</h1>
+  {{/if}}
+
+  {{#unless isInteracting}}
+    {{#if isRemovable}}
+      <a {{action "remove" bubbles=false}} class="as-calendar-occurrence__remove"></a>
+    {{/if}}
+
+    {{#if isResizable}}
+      <div class="as-calendar-occurrence__resize-handle"></div>
+    {{/if}}
+  {{/unless}}
+  </div>
+{{/if}}
