PayPal Sandbox Complete

--- a/SelfStart/SelfStartFrontEnd/app/templates/components/nav-bar.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/nav-bar.hbs
@@ -22,6 +22,7 @@
 
 
             <div class="right menu {{invertedValue}}">
+              <a class = "item" >{{payment-button}}</a>
               <a class="item scroll" href="#about">About</a>
               <a class="item">How it Works</a>
               <a class="item">Services</a>
